--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,12 +1,66 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 .slider-container{
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .slider-item{
-    /* transform: translateX(-50%); */
-    width: 33%;
+    text-align: center;
+    width: 34%;
     flex: 0 0 auto;
+    margin:auto;
+    transition:transform 1s;
+}
+
+@media screen and (max-width: 576px)
+{
+    .slider-item{
+        width: 100%;
+    }
+}
+@media screen and (min-width: 576px)
+{
+    .slider-item{
+        width: 50%;
+    }
+}
+@media screen and (min-width: 768px)
+{
+    .slider-item{
+        width: 34%;
+    }
+}
+@media screen and (min-width: 992px)
+{
+    .slider-item{
+        width: 25%;
+    }
+}
+@media screen and (min-width: 1200px)
+{
+    .slider-item{
+        width: 20%;
+    }
+}
+@media screen and (min-width: 1400px)
+{
+    .slider-item{
+        width: 17%;
+    }
+}
+
+
+
+.navigators{
+    position: absolute;
+    z-index: 1;
+}
+.left{
+    margin:1rem;
+}
+.right{
+    margin:1rem;
+    right:0;
 }
