--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,17 +1,26 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 .slider-container{
     display: flex;
+    position:relative;
+    margin-right: auto;
+    margin-left: auto;
     align-items: center;
-    width: 100%;
+    width: 98%;
+    margin-bottom: 1em;
     overflow-x: hidden;
 }
 
 .slider-item{
-    text-align: center;
     width: 34%;
     flex: 0 0 auto;
     margin:auto;
-    transition:transform 1s;
+    transition:transform 0.5s;
+    z-index:0;
+}
+
+.slider-item *{
+    max-width: 99%;
+    height: auto;
 }
 
 @media screen and (max-width: 576px)
@@ -55,12 +64,10 @@
 
 .navigators{
     position: absolute;
+    margin:1rem;
     z-index: 1;
 }
-.left{
-    margin:1rem;
-}
+
 .right{
-    margin:1rem;
     right:0;
 }
