Adding game of life

--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -7,7 +7,7 @@
     align-items: center;
     width: 98%;
     margin-bottom: 1em;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .slider-item{
