--- a/src/pages/Projects/WizChat/src/Chat.css
+++ b/src/pages/Projects/WizChat/src/Chat.css
@@ -15,3 +15,13 @@
     position: sticky;
     top: 0;
 }
+.messagesContainer{
+    display: flex;
+    flex-direction: column;
+
+}
+.msgBySelfUser
+{
+    align-self:flex-end;
+    background-color: slateblue;
+}
