Now each message is identified by uid. Made some UI changes. Input field gets disabled while message is sending to firestore.

--- a/src/pages/Projects/WizChat/src/Chat.css
+++ b/src/pages/Projects/WizChat/src/Chat.css
@@ -4,6 +4,8 @@
     overflow-wrap:break-word;
 }
 .chatBox{
+    display: flex;
+    flex-direction: column;
     height:90vh;
     overflow-y: scroll;
 }
