Added two new svgs. The Sign up and sign in are now two distinguished states and can be toggled through conditional rendering. Reworked the forms completely.

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@ body {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+.buttonAsAnchor {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+  text-decoration: underline;
+  cursor: pointer;
+}
