--- a/src/pages/Projects/WizChat/src/Chat.css
+++ b/src/pages/Projects/WizChat/src/Chat.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     height:90vh;
-    overflow-y: scroll;
 }
 .stickBottom{
     position: sticky;
@@ -20,6 +19,7 @@
 .messagesContainer{
     display: flex;
     flex-direction: column;
+    overflow-y: scroll
 
 }
 .msgBySelfUser
