--- a/src/pages/Projects/WizChat/src/Chat.css
+++ b/src/pages/Projects/WizChat/src/Chat.css
@@ -19,7 +19,8 @@
 }
 .messagesContainer{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    flex-direction: column-reverse;
     overflow-y: scroll
 
 }
